# spacer

./: .gitignore  MANIFEST.in  README.md  README.rst  backlog.rst  requirements.txt  setup.cfg
Documentation/: README.md  README.rst  backlog.rst  developer_notes.md  developer_notes.rst
queries/: create_database.sql  fill_dummy_row_to_database.sql
scripts/: initialize_db.py
sql/: companies.sql  jobs.sql  schema.sql  test.sql
src/spacer/: app.py  database.py  database_connector.py  database_handler.py  formatting.py  globals.py  main.py  query_manager.py  quires.py  tui.py  tui_engine.py  utils.py
