[metadata]
name = spacer
version = 0.0.2
description = SPACER is a lightweight command-line tool to track your job applications 
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/rstofi/spacer
author = Kristof Rozgonyi
author_email = kristof.rozgonyi.astro@gmail.com
classifiers =
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
install_requires =
    python>=3.10.0

[options.entry_points]
console_scripts =
    spacer = spacer.main:main
